...
                Image(uiImage: DesignSystemImages.Glyphs.Size16.clear)
                    .highPriorityGesture(TapGesture().onEnded {
                        onDelete()
                    })
                    .tintIfAvailable(contentColor(.iconsSecondary))
                    .padding(.leading, Metrics.indicatorLeadingPadding)
                    .accessibilityIdentifier("Autocomplete.Suggestions.ListItem.DeleteButton")
                    .accessibilityLabel(UserText.actionDelete)
            }
        }
    }

    private struct Metrics {
...
