...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Add Widget to Home Screen-->
        <scene sceneID="Cdj-M3-TAb">
            <objects>
                <viewController storyboardIdentifier="AddWidget" id="CCs-sH-MyT" customClass="WidgetEducationViewController" customModule="DuckDuckGo" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="TFR-ev-p5q"/>
                        <viewControllerLayoutGuide type="bottom" id="nku-Hz-HNS"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="P7Z-si-x6f">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                        <rect key="frame" x="20" y="55.333332061767578" width="374" height="44.333332061767578"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="ULa-28-l3s" id="WB6-p9-ymj">
                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44.333332061767578"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Tab" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zpg-h0-rYv">
                                                    <rect key="frame" x="20" y="9.9999999999999982" width="265" height="24.333333333333329"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="AN5-oc-b3c"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <nil key="textColor"/>
...
