...
            if #available(iOS 18.2, *), viewModel.shouldShowSetAsDefaultBrowser {
                SettingsCellView(label: UserText.setAsDefaultBrowser,
                                 image: Image(uiImage: DesignSystemImages.Color.Size24.defaultBrowserMobile),
                                 action: { viewModel.setAsDefaultBrowser("complete-setup") },
                                 webLinkIndicator: true,
                                 isButton: true)
                .accessibilityIdentifier("Settings.ListItem.Field_DefaultBrowser")
                .swipeActions {
                    Button {
                        viewModel.dismissSetAsDefaultBrowser()
                    } label: {
                        Image(uiImage: DesignSystemImages.Glyphs.Size24.eyeClosed
                            .withTintColor(UIColor(designSystemColor: .textPrimary), renderingMode: .alwaysOriginal))
...
