...
    }
}

#Preview {
    HStack(alignment: .top) {
        FavoriteItemView(favorite: Favorite(id: UUID().uuidString, title: "Text", domain: "facebook.com")).frame(width: 64)
        FavoriteItemView(favorite: Favorite(id: UUID().uuidString, title: "Lorem Ipsum is simply dummy text of the printing and typesetting industry", domain: "duckduckgo.com")).frame(width: 64)
    }
}

private extension FavoriteItemView {
    init(favorite: Favorite, isEditable: Bool = true) {
        self.init(favorite: favorite, faviconLoading: nil, isEditable: isEditable, onMenuAction: nil)
...
