# backgrounding.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site"
- pressKey: Enter

- assertVisible: ".*Privacy Test Pages.*"

# Go home and hover there a bit
- pressKey: Home
- swipe:  
    start: 50%, 50%
    end: 10%, 50%
- swipe:  
    start: 10%, 50%
    end: 50%, 50%
- tapOn: "DuckDuckGo"

# Validate
- assertVisible: "Privacy Test Pages"
- assertVisible: "Browsing menu"
- tapOn: "Browsing menu"
- assertVisible: "Add Bookmark"
- tapOn: "Add Bookmark"
- tapOn: "Privacy Icon"
- assertVisible: "Protections are ON for this site"
- tapOn: "Done"

# Run background assertion from new tab page
- assertVisible: "Tab Switcher"
- tapOn: "Tab Switcher"
- tapOn: "New Tab"

# Go home and hover there a bit
- pressKey: Home
- swipe:  
    start: 50%, 50%
    end: 10%, 50%
- swipe:  
    start: 10%, 50%
    end: 50%, 50%
- tapOn: "DuckDuckGo"

# Check menus
- runFlow:
    file: ../shared/dismiss_address_bar_editing.yaml
- tapOn: "Browsing menu"
- tapOn: "Settings"
- assertVisible:
    id: "Settings.ListItem.Field_DefaultBrowser"
- tapOn: "Done"

- assertVisible: "Bookmarks"
- tapOn: "Bookmarks"
- assertVisible: "Privacy Test Pages - Home"
- tapOn: "Done"

- assertVisible: "Tab Switcher"
- tapOn: "Tab Switcher"

